<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:elevation="3dp"
        android:background="@drawable/search_bar_background"
        android:hint="@string/searchTextHint"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:layout_margin="20dp"
        android:inputType="text"
        android:autofillHints="search here"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchText"
        android:backgroundTint="#2A398C"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stockDetails"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stockName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/stock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/stockNameHint"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="13dp"
            android:layout_margin="10dp"
            android:autofillHints="price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stockPrice"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/stock_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/stockPriceHint"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="13dp"
            android:layout_margin="10dp"
            android:autofillHints="price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceChange"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/price_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/priceChangeHint"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="13dp"
            android:layout_margin="10dp"
            android:autofillHints="price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChangeInPercent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/percent_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/ChangeInPercentHint"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="13dp"
            android:layout_margin="10dp"
            android:autofillHints="price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LatestTradingDay"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/trading_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/LatestTradingDayHint"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="13dp"
            android:layout_margin="10dp"
            android:autofillHints="price" />

    </LinearLayout>

</LinearLayout>